# codingame_keepoffthegrass

./: .gitignore  CMakeLists.txt  sources.txt
src/: CMakeLists.txt  agent.cpp  agent.hpp  game.cpp  game.hpp  grid.cpp  grid.hpp  gridinfo.cpp  gridinfo.hpp  main.cpp  position.cpp  position.hpp  starterai.cpp  tile.cpp  tile.hpp
tests/: CMakeLists.txt  grid_test.cc  tile_test.cc
